--- a/notebooks/01_test2.ipynb
+++ b/notebooks/01_test2.ipynb
@@ -2,54 +2,62 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ffb97d5",
+   "id": "2a0e9008",
    "metadata": {},
    "source": [
-    "# **Test Notebook**"
+    "# **Test2**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16e9938c",
+   "id": "64c6e62e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-29 15:11:21.925040\n"
+      "testing_2\n"
      ]
     }
    ],
    "source": [
-    "import datetime\n",
-    "\n",
-    "print(datetime.datetime.now())"
+    "print(\"testing_2\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "652a284f",
+   "id": "1fb99d40",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
    "source": [
-    "print(\"testing\")"
+    "for i in range(10):\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508ba1a0",
+   "id": "c189359a",
    "metadata": {},
    "outputs": [],
    "source": []
